--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,3 +5,6 @@ set(SRCS
 
 add_library(RLWEOKVS_Tests ${SRCS})
 target_link_libraries(RLWEOKVS_Tests RLWEOKVS)
+target_include_directories(RLWEOKVS_Tests PRIVATE
+    ${CMAKE_SOURCE_DIR}/rlwe-okvs
+)
