first running version with algorithmic opts

--- a/rlwe-okvs/CMakeLists.txt
+++ b/rlwe-okvs/CMakeLists.txt
@@ -1,6 +1,9 @@
 set(SRCS
     "rlwe-okvs/okvs.cpp"
     "rlwe-okvs/rpmt.cpp"
+    "band_okvs/band_okvs.cc"
+    "band_okvs/band.cc"
+    "psu.cpp"
 )
 
 add_library(RLWEOKVS STATIC ${SRCS})
