sspmt to avoid during execution leakage

--- a/rlwe-okvs/CMakeLists.txt
+++ b/rlwe-okvs/CMakeLists.txt
@@ -1,8 +1,12 @@
 set(SRCS
     "rlwe-okvs/okvs.cpp"
-    "rlwe-okvs/rpmt.cpp"
+    "rlwe-okvs/sspmt.cpp"
     "band_okvs/band_okvs.cc"
     "band_okvs/band.cc"
+    "GMW/Circuit.cpp"
+    "GMW/Gmw.cpp"
+    "GMW/SilentTripleGen.cpp"
+    "GMW/TripleGen.cpp"
     "psu.cpp"
 )
 
