support arbitrary wrap count / chosenOT -> OTP opti

--- a/rlwe-okvs/CMakeLists.txt
+++ b/rlwe-okvs/CMakeLists.txt
@@ -3,6 +3,7 @@ set(SRCS
     "rlwe-okvs/sspmt.cpp"
     "band_okvs/band_okvs.cc"
     "band_okvs/band.cc"
+    "band_okvs/oprf.cpp"
     "GMW/Circuit.cpp"
     "GMW/Gmw.cpp"
     "GMW/SilentTripleGen.cpp"
