--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,10 +1,11 @@
 set(SRCS
 	OKVS_tests.cpp
-    OPRF_Tests.cpp
+    OPRF_tests.cpp
     SEAL_tests.cpp
     RPMT_tests.cpp
     PSU_tests.cpp
     GMW_tests.cpp
+    SEQ_tests.cpp
     UnitTests.cpp
 )
 
